--- a/gallery/src/index.css
+++ b/gallery/src/index.css
@@ -9,6 +9,7 @@ body {
   background-color: #0a0a0f;
   color: #e4e4e7;
   min-height: 100vh;
+
 }
 
 #root {
@@ -50,12 +51,27 @@ button {
   width: 100%;
 }
 
-.field-input--date {
-  color-scheme: dark;
+.MuiPickersPopper-root {
+  z-index: 9999;
 }
 
 .results-column {
   grid-column: 2 / 3;
+}
+
+.chart-column {
+  grid-column: 2 / 5;
+}
+
+.chart-container {
+  width: 100%;
+  height: 550px;
+}
+
+.chart-empty {
+  color: #a1a1aa;
+  text-align: center;
+  padding: 2rem;
 }
 
 .bars-list {
@@ -118,6 +134,6 @@ button:disabled {
 
 .main-title {
   font-size: 6rem;
+  font-weight: 700;
   margin: 0rem !important;
-
 }
